--- a/ai.html
+++ b/ai.html
@@ -3,21 +3,16 @@
 <head><meta charset="UTF-8"><title>작물 추천 결과</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
-  body {
-    background: url('earth-bg.jpg') no-repeat center center fixed;
-    background-size: cover;
-  }
-</style>
-</head>
+  body { background: url('earth-bg.jpg') no-repeat center center fixed; background-size: cover; }
+</style></head>
 <body class="bg-black/80 text-white font-sans backdrop-blur">
   <main class="max-w-3xl mx-auto py-10 px-6">
-    <h2 class="text-3xl font-bold mb-6">📋 추천 작물 목록 (부산, 봄)</h2>
-    <ul class="list-disc list-inside space-y-1 text-sm text-gray-300">
-      <li>상추</li>
-      <li>청경채</li>
-      <li>완두콩</li>
+    <h2 class="text-3xl font-bold mb-4">📋 작물 추천 결과</h2>
+    <ul class="list-disc text-sm text-gray-300 space-y-1">
+      <li>상추 - 유통 안정성 높음</li>
+      <li>청경채 - 빠른 수확 가능</li>
+      <li>완두콩 - 단백질 높고 토양개량 효과</li>
     </ul>
-    <p class="mt-6 text-sm text-teal-400">기온 안정성, 병해 저항성, 수확 회전력, 시장성을 고려한 최적 추천</p>
   </main>
 </body>
 </html>
