--- a/index.html
+++ b/index.html
@@ -1,46 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>AGRINEXUS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body {
-      background: url('earth-bg.jpg') no-repeat center center fixed;
-      background-size: cover;
-    }
-  </style>
-</head>
+<html lang="ko">
+<head><meta charset="UTF-8"><title>AGRINEXUS</title>
+<script src="https://cdn.tailwindcss.com"></script>
+<style>
+  body { background: url('earth-bg.jpg') no-repeat center center fixed; background-size: cover; }
+</style></head>
 <body class="bg-black/80 text-white font-sans backdrop-blur">
-  <header class="flex justify-between items-center px-6 py-4">
-    <h1 class="text-2xl font-bold tracking-wide">AGRINEXUS</h1>
-    <nav class="space-x-6 text-sm">
-      <a href="#" class="hover:text-teal-300">About</a>
-      <a href="#" class="hover:text-teal-300">Chat</a>
-      <a href="#" class="hover:text-teal-300">Sign up</a>
-      <button class="bg-slate-800 px-4 py-1 rounded text-sm">Sign up</button>
-    </nav>
-  </header>
-
-  <main class="text-center py-16 px-6">
-    <h2 class="text-4xl font-bold mb-4">AI-Powered Agricultural Solutions</h2>
-    <p class="text-gray-300 mb-6">Harness the power of AI to optimize and transform your agricultural operations.</p>
-    <a href="smartfarm.html" class="bg-teal-500 hover:bg-teal-400 text-white px-6 py-3 rounded font-semibold">Get Started</a>
+  <main class="text-center py-20">
+    <h1 class="text-4xl font-bold mb-4">AI 기반 농업 솔루션</h1>
+    <p class="text-gray-300 mb-6">스마트 농업을 위한 모든 기능을 연결합니다.</p>
+    <a href="smartfarm.html" class="bg-teal-500 text-white px-6 py-3 rounded text-lg">스마트팜 시작</a>
   </main>
-
-  <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 max-w-6xl mx-auto pb-20 px-6">
-    <div class="bg-gray-900/80 p-6 rounded-xl"><h3 class="font-bold text-lg">Smart Farm</h3><p class="text-sm text-gray-300">Monitor and manage your smart farming operations</p><a href="smartfarm.html" class="text-teal-400 text-sm mt-2 inline-block">View →</a></div>
-    <div class="bg-gray-900/80 p-6 rounded-xl"><h3 class="font-bold text-lg">Logistics System</h3><p class="text-sm text-gray-300">Optimize required export documents for each country</p><a href="logistics.html" class="text-teal-400 text-sm mt-2 inline-block">View →</a></div>
-    <div class="bg-gray-900/80 p-6 rounded-xl"><h3 class="font-bold text-lg">Contract Management</h3><p class="text-sm text-gray-300">Automate and manage your agricultural contracts</p><a href="#" class="text-teal-400 text-sm mt-2 inline-block">View →</a></div>
-    <div class="bg-gray-900/80 p-6 rounded-xl"><h3 class="font-bold text-lg">Revenue Prediction</h3><p class="text-sm text-gray-300">Estimate and analyze crop revenue based on region and market</p><a href="report.html" class="text-teal-400 text-sm mt-2 inline-block">View →</a></div>
-    <div class="bg-gray-900/80 p-6 rounded-xl"><h3 class="font-bold text-lg">Export Documentation</h3><p class="text-sm text-gray-300">Generate required export documents for your crops</p><a href="#" class="text-teal-400 text-sm mt-2 inline-block">View →</a></div>
-    <div class="bg-gray-900/80 p-6 rounded-xl"><h3 class="font-bold text-lg">Active Users</h3><p class="text-teal-400 text-2xl">1,234 <span class="text-sm text-gray-400">online</span></p></div>
-    <div class="bg-gray-900/80 p-6 rounded-xl"><h3 class="font-bold text-lg">Self-Learning System</h3><p class="text-sm text-gray-300">Improve AI and evolve features over time</p><a href="#" class="text-teal-400 text-sm mt-2 inline-block">View →</a></div>
-  </section>
-
-  <div class="fixed bottom-6 right-6">
-    <button class="bg-blue-700 hover:bg-blue-600 p-4 rounded-full shadow-lg text-white text-lg">💬</button>
-  </div>
 </body>
 </html>
