--- a/schedule.html
+++ b/schedule.html
@@ -6,14 +6,14 @@
   body { background: url('earth-bg.jpg') no-repeat center center fixed; background-size: cover; }
 </style></head>
 <body class="bg-black/80 text-white font-sans backdrop-blur">
-  <main class="max-w-3xl mx-auto py-10 px-6">
-    <h2 class="text-3xl font-bold mb-4">📅 자동 생성 재배 일정</h2>
-    <ul class="list-disc text-sm text-gray-300 space-y-1">
-      <li>파종: 3월 10일</li>
-      <li>관리 작업: 3월 20일</li>
-      <li>수확 시작: 4월 5일</li>
-      <li>출하 완료: 4월 15일</li>
-    </ul>
-  </main>
+<main class="max-w-3xl mx-auto py-10 px-6">
+  <h2 class="text-3xl font-bold mb-6">📅 자동 재배 일정</h2>
+  <ul class="list-disc text-sm text-gray-300 space-y-1">
+    <li>파종 시작: 3월 10일</li>
+    <li>관리 작업: 3월 20일</li>
+    <li>수확 시작: 4월 5일</li>
+    <li>출하 완료: 4월 15일</li>
+  </ul>
+</main>
 </body>
 </html>
