--- a/smartfarm.html
+++ b/smartfarm.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>Smart Farm</title>
+  <title>스마트팜 기능</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body { background: url('earth-bg.jpg') no-repeat center center fixed; background-size: cover; }
@@ -15,6 +15,10 @@
       <div class="bg-gray-900/80 p-6 rounded-xl">
         <h3 class="text-lg font-semibold text-teal-400 mb-1">AI 작물 추천</h3>
         <a href="ai.html" class="text-sm text-teal-300 hover:underline">→ 결과 보기</a>
+      </div>
+      <div class="bg-gray-900/80 p-6 rounded-xl">
+        <h3 class="text-lg font-semibold text-teal-400 mb-1">재배 일정 생성</h3>
+        <a href="schedule.html" class="text-sm text-teal-300 hover:underline">→ 결과 보기</a>
       </div>
     </div>
   </main>
