--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>AGRINEXUS 플랫폼</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -10,8 +10,8 @@
   </style>
 </head>
 <body class="bg-black/80 text-white font-sans backdrop-blur">
-  <main class="text-center py-20 px-6">
-    <h1 class="text-4xl font-bold mb-4">AI 기반 농업 솔루션</h1>
+  <main class="text-center py-16 px-4">
+    <h1 class="text-4xl font-bold mb-2">AI 기반 농업 솔루션</h1>
     <p class="text-gray-300 mb-6">AI의 힘을 활용하여 농업 운영을 최적화하고 혁신하세요.</p>
     <a href="smartfarm.html" class="bg-teal-500 text-white px-6 py-2 rounded">스마트팜 시작</a>
   </main>
