--- a/schedule.html
+++ b/schedule.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head><meta charset="UTF-8"><title>재배 일정</title>
-<script src="https://cdn.tailwindcss.com"></script>
-<style>
-  body { background: url('earth-bg.jpg') no-repeat center center fixed; background-size: cover; }
-</style></head>
+<head>
+  <meta charset="UTF-8" />
+  <title>재배 일정 생성 결과</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body { background: url('earth-bg.jpg') no-repeat center center fixed; background-size: cover; }
+  </style>
+</head>
 <body class="bg-black/80 text-white font-sans backdrop-blur">
-<main class="max-w-3xl mx-auto py-10 px-6">
-  <h2 class="text-3xl font-bold mb-6">📅 자동 재배 일정</h2>
-  <ul class="list-disc text-sm text-gray-300 space-y-1">
-    <li>파종 시작: 3월 10일</li>
-    <li>관리 작업: 3월 20일</li>
-    <li>수확 시작: 4월 5일</li>
-    <li>출하 완료: 4월 15일</li>
-  </ul>
-</main>
+  <main class="max-w-3xl mx-auto py-10 px-6">
+    <h2 class="text-3xl font-bold mb-6">📅 재배 일정 생성 결과</h2>
+    <ul class="bg-gray-900/90 p-6 rounded-xl space-y-2 text-sm text-gray-300 list-disc list-inside">
+      <li>파종 시작: 2024-04-01</li>
+      <li>관리 작업: 2024-04-10</li>
+      <li>수확 준비: 2024-04-25</li>
+      <li>출하 예정: 2024-05-15</li>
+    </ul>
+  </main>
 </body>
 </html>
