--- a/index.html
+++ b/index.html
@@ -1,19 +1,52 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>AGRINEXUS 플랫폼</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body { background: url('earth-bg.jpg') no-repeat center center fixed; background-size: cover; }
-  </style>
+    <meta charset="UTF-8">
+    <title>AgriNexus World</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-black/80 text-white font-sans backdrop-blur">
-  <main class="text-center py-16 px-4">
-    <h1 class="text-4xl font-bold mb-2">AI 기반 농업 솔루션</h1>
-    <p class="text-gray-300 mb-6">AI의 힘을 활용하여 농업 운영을 최적화하고 혁신하세요.</p>
-    <a href="smartfarm.html" class="bg-teal-500 text-white px-6 py-2 rounded">스마트팜 시작</a>
-  </main>
+<body class="bg-gray-900 text-white">
+    <header class="flex justify-between items-center p-6 bg-gray-800 shadow">
+        <h1 class="text-2xl font-bold">AgriNexus World</h1>
+        <nav class="space-x-4">
+            <a href="#" class="hover:underline">About</a>
+            <a href="#" class="hover:underline">AI</a>
+            <a href="#" class="hover:underline">Logistics</a>
+            <a href="#" class="hover:underline">Reports</a>
+            <a href="#" class="hover:underline">Sign In</a>
+        </nav>
+    </header>
+    <main class="text-center py-16 px-6">
+        <h2 class="text-4xl font-extrabold mb-4">AI-Powered Agricultural Solutions</h2>
+        <p class="text-lg mb-6">Optimize smart farming with cutting-edge AI, logistics and data systems.</p>
+        <a href="#" class="bg-teal-500 hover:bg-teal-400 text-white font-bold py-2 px-4 rounded">Get Started</a>
+        <div class="mt-12 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div class="p-6 bg-gray-800 rounded shadow">
+                <h3 class="text-xl font-semibold">Smart Farm</h3>
+                <p class="text-sm">Manage and monitor your smart farming system.</p>
+            </div>
+            <div class="p-6 bg-gray-800 rounded shadow">
+                <h3 class="text-xl font-semibold">Logistics System</h3>
+                <p class="text-sm">Optimize export and internal delivery.</p>
+            </div>
+            <div class="p-6 bg-gray-800 rounded shadow">
+                <h3 class="text-xl font-semibold">Revenue Prediction</h3>
+                <p class="text-sm">Forecast and analyze crop-based income.</p>
+            </div>
+            <div class="p-6 bg-gray-800 rounded shadow">
+                <h3 class="text-xl font-semibold">Contract Center</h3>
+                <p class="text-sm">Auto-generate legal and export contracts.</p>
+            </div>
+            <div class="p-6 bg-gray-800 rounded shadow">
+                <h3 class="text-xl font-semibold">Export Docs</h3>
+                <p class="text-sm">Country-based document generation system.</p>
+            </div>
+            <div class="p-6 bg-gray-800 rounded shadow">
+                <h3 class="text-xl font-semibold">AI Learning</h3>
+                <p class="text-sm">Self-evolving platform logic and optimization.</p>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
