--- a/pages/smartfarm.html
+++ b/pages/smartfarm.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Report | AgriNexus World</title>
+    <title>Smartfarm | AgriNexus World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-900 text-white">
-    <header class="p-6 bg-gray-800 shadow text-center text-2xl font-bold">AgriNexus World - Report</header>
+    <header class="p-6 bg-gray-800 shadow text-center text-2xl font-bold">AgriNexus World - Smartfarm</header>
     <main class="p-10 text-center">
-        <h2 class="text-3xl font-semibold mb-4">Report</h2>
-        <p class="text-lg">Report Generator - Create reports and download as PDF.</p>
+        <h2 class="text-3xl font-semibold mb-4">Smartfarm</h2>
+        <p class="text-lg">Smart Farm - Monitor and manage your smart farming operations.</p>
     </main>
 </body>
 </html>
