--- a/pages/ai.html
+++ b/pages/ai.html
@@ -1,49 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AGRINEXUS - AI 작물 추천</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body {
-      background: url('/earth-bg.jpg') no-repeat center center fixed;
-      background-size: cover;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Ai | AgriNexus World</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-black/80 text-white font-sans backdrop-blur">
-  <header class="flex justify-between items-center px-6 py-4">
-    <h1 class="text-xl font-bold tracking-wider">AGRINEXUS</h1>
-    <nav class="space-x-4 text-sm">
-      <a href="/index.html" class="hover:text-teal-300">Home</a>
-      <a href="/pages/ai.html" class="hover:text-teal-300">AI</a>
-      <a href="/pages/report.html" class="hover:text-teal-300">Report</a>
-      <a href="/pages/contract.html" class="hover:text-teal-300">Contract</a>
-      <a href="/pages/admin.html" class="hover:text-teal-300">Admin</a>
-      <a href="/pages/chat.html" class="hover:text-teal-300">Chat</a>
-    </nav>
-  </header>
-  <main class="max-w-4xl mx-auto py-10 px-6">
-    
-<h2 class="text-3xl font-bold mb-6">AI 작물 추천 시스템</h2>
-<form class="space-y-4">
-  <div>
-    <label class="block mb-1 text-sm">지역 입력:</label>
-    <input type="text" placeholder="예: 전북 김제" class="w-full px-4 py-2 rounded bg-gray-800 border border-gray-600 text-white">
-  </div>
-  <div>
-    <label class="block mb-1 text-sm">계절 선택:</label>
-    <select class="w-full px-4 py-2 rounded bg-gray-800 border border-gray-600 text-white">
-      <option>봄</option>
-      <option>여름</option>
-      <option>가을</option>
-      <option>겨울</option>
-    </select>
-  </div>
-  <button type="submit" class="mt-4 bg-teal-600 hover:bg-teal-500 px-6 py-2 rounded">추천 받기</button>
-</form>
-
-  </main>
+<body class="bg-gray-900 text-white">
+    <header class="p-6 bg-gray-800 shadow text-center text-2xl font-bold">AgriNexus World - Ai</header>
+    <main class="p-10 text-center">
+        <h2 class="text-3xl font-semibold mb-4">Ai</h2>
+        <p class="text-lg">AI System - Advanced crop recommendations and predictive analytics.</p>
+    </main>
 </body>
 </html>
