--- a/src/contract/index.html
+++ b/src/contract/index.html
@@ -1,1 +1,34 @@
-<!-- src/contract 기능 페이지 -->
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <title>계약서 자동 생성기</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <script>
+    function generateContract() {
+      const name = document.getElementById("name").value;
+      const crop = document.getElementById("crop").value;
+      const area = document.getElementById("area").value;
+      const duration = document.getElementById("duration").value;
+      const amount = document.getElementById("amount").value;
+      const output = document.getElementById("output");
+      output.innerText = `📄 계약자: ${name}\n작물: ${crop}\n면적: ${area}㎡\n기간: ${duration}\n계약금액: ${amount}원\n\n※ 위 조건에 따라 스마트팜 계약이 성립됩니다.`;
+    }
+  </script>
+</head>
+<body class="bg-gray-900 text-white">
+  <header class="bg-blue-800 text-center p-6 text-2xl font-bold">계약서 자동 생성</header>
+  <main class="max-w-xl mx-auto p-8">
+    <div class="grid gap-4">
+      <input id="name" type="text" placeholder="계약자 이름" class="p-2 rounded text-gray-800" />
+      <input id="crop" type="text" placeholder="작물 이름" class="p-2 rounded text-gray-800" />
+      <input id="area" type="number" placeholder="면적 (㎡)" class="p-2 rounded text-gray-800" />
+      <input id="duration" type="text" placeholder="계약 기간 (예: 6개월)" class="p-2 rounded text-gray-800" />
+      <input id="amount" type="number" placeholder="계약 금액 (원)" class="p-2 rounded text-gray-800" />
+      <button onclick="generateContract()" class="bg-blue-600 hover:bg-blue-500 text-white px-4 py-2 rounded">계약서 생성</button>
+    </div>
+    <pre id="output" class="mt-6 p-4 bg-gray-800 rounded text-blue-300 text-lg font-medium whitespace-pre-wrap"></pre>
+  </main>
+</body>
+</html>
