--- a/src/contract/index.html
+++ b/src/contract/index.html
@@ -13,7 +13,21 @@
       const duration = document.getElementById("duration").value;
       const amount = document.getElementById("amount").value;
       const output = document.getElementById("output");
-      output.innerText = `📄 계약자: ${name}\n작물: ${crop}\n면적: ${area}㎡\n기간: ${duration}\n계약금액: ${amount}원\n\n※ 위 조건에 따라 스마트팜 계약이 성립됩니다.`;
+
+      const resultText = `📄 계약자: ${name}\n작물: ${crop}\n면적: ${area}㎡\n기간: ${duration}\n계약금액: ${amount}원\n\n※ 위 조건에 따라 스마트팜 계약이 성립됩니다.`;
+      output.innerText = resultText;
+
+      // 저장용 텍스트를 숨겨진 textarea에 복사
+      document.getElementById("pdfText").value = resultText;
+    }
+
+    function downloadPDF() {
+      const text = document.getElementById("pdfText").value;
+      const blob = new Blob([text], {{ type: 'application/pdf' }});
+      const link = document.createElement('a');
+      link.href = URL.createObjectURL(blob);
+      link.download = "agrinexus_contract.pdf";
+      link.click();
     }
   </script>
 </head>
@@ -27,8 +41,10 @@
       <input id="duration" type="text" placeholder="계약 기간 (예: 6개월)" class="p-2 rounded text-gray-800" />
       <input id="amount" type="number" placeholder="계약 금액 (원)" class="p-2 rounded text-gray-800" />
       <button onclick="generateContract()" class="bg-blue-600 hover:bg-blue-500 text-white px-4 py-2 rounded">계약서 생성</button>
+      <button onclick="downloadPDF()" class="bg-green-600 hover:bg-green-500 text-white px-4 py-2 rounded">📄 PDF 다운로드</button>
     </div>
     <pre id="output" class="mt-6 p-4 bg-gray-800 rounded text-blue-300 text-lg font-medium whitespace-pre-wrap"></pre>
+    <textarea id="pdfText" class="hidden"></textarea>
   </main>
 </body>
 </html>
