--- a/src/ai/index.html
+++ b/src/ai/index.html
@@ -1,1 +1,34 @@
-<!-- AI 기능 페이지 -->
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <title>AI 작물 분석 시뮬레이터</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <script>
+    function generateAnalysis() {
+      const crop = document.getElementById("cropInput").value.trim();
+      const area = document.getElementById("areaInput").value.trim();
+      const resultBox = document.getElementById("gptResult");
+
+      if (crop && area) {
+        const result = `🤖 AI 분석 결과:\n\n"${crop}"는 현재 기후 조건과 스마트팜 환경에서 적합한 작물로 평가됩니다. 예상 수익률은 면적 ${area}㎡ 기준으로 최대화할 수 있으며, 자동 제어 및 AI 센서 기반 운영이 수익성을 높이는 핵심 요소입니다.\n\n이 작물은 수출 가능성과 내수 안정성이 높아 재배 추천 등급: ★★★★☆`;
+        resultBox.innerText = result;
+      } else {
+        resultBox.innerText = "작물명과 면적을 모두 입력해주세요.";
+      }
+    }
+  </script>
+</head>
+<body class="bg-gray-900 text-white min-h-screen">
+  <header class="bg-green-800 text-center p-6 text-2xl font-bold">GPT 기반 AI 분석</header>
+  <main class="max-w-2xl mx-auto p-8">
+    <div class="grid gap-4">
+      <input id="cropInput" type="text" placeholder="작물 이름 입력" class="p-2 rounded text-gray-800" />
+      <input id="areaInput" type="number" placeholder="재배 면적 (㎡)" class="p-2 rounded text-gray-800" />
+      <button onclick="generateAnalysis()" class="bg-green-600 hover:bg-green-500 text-white px-4 py-2 rounded">분석 생성</button>
+    </div>
+    <pre id="gptResult" class="mt-6 p-4 bg-gray-800 rounded text-green-300 text-lg font-medium whitespace-pre-wrap"></pre>
+  </main>
+</body>
+</html>
