--- a/src/contract/index.html
+++ b/src/contract/index.html
@@ -58,6 +58,51 @@
     </div>
 
     <textarea id="pdfText" class="hidden"></textarea>
-  </main>
+  
+<section class="mt-8">
+  <h3 class="text-xl font-semibold mb-2">✍️ 전자 서명</h3>
+  <canvas id="signaturePad" width="500" height="150" class="bg-white mb-2 rounded"></canvas><br>
+  <button onclick="clearSignature()" class="bg-gray-600 hover:bg-gray-500 text-white px-4 py-2 rounded mr-2">서명 지우기</button>
+  <button onclick="saveSignature()" class="bg-green-700 hover:bg-green-600 text-white px-4 py-2 rounded">서명 저장</button>
+  <p id="sigStatus" class="mt-2 text-green-400 text-sm"></p>
+</section>
+
+<script>
+  const canvas = document.getElementById("signaturePad");
+  const ctx = canvas.getContext("2d");
+  let drawing = false;
+
+  canvas.addEventListener("mousedown", () => drawing = true);
+  canvas.addEventListener("mouseup", () => drawing = false);
+  canvas.addEventListener("mouseout", () => drawing = false);
+  canvas.addEventListener("mousemove", draw);
+
+  function draw(event) {
+    if (!drawing) return;
+    ctx.lineWidth = 2;
+    ctx.lineCap = "round";
+    ctx.strokeStyle = "#000";
+    ctx.lineTo(event.offsetX, event.offsetY);
+    ctx.stroke();
+    ctx.beginPath();
+    ctx.moveTo(event.offsetX, event.offsetY);
+  }
+
+  function clearSignature() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    document.getElementById("sigStatus").innerText = "";
+  }
+
+  function saveSignature() {
+    const dataURL = canvas.toDataURL();
+    if (dataURL.includes("data:image/png")) {
+      document.getElementById("sigStatus").innerText = "✅ 서명이 저장되었습니다. (이미지 형태)";
+    } else {
+      document.getElementById("sigStatus").innerText = "⚠️ 서명이 비어있습니다.";
+    }
+  }
+</script>
+
+</main>
 </body>
 </html>
